--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "filtered-list2",
+  "name": "react-mashup",
+  "description": "an app that is a mashup of react challenges",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
